# AICompanionNemi

./: .gitignore
core-daemon/: Cargo.toml
core-daemon/.cargo/: config.toml
core-daemon/src/: activity.rs  app.rs  chat.rs  config.rs  context.rs  context_fusion.rs  decision.rs  events.rs  llm.rs  main.rs  memory.rs  mood.rs  observation.rs  ocr.rs  persona.rs  reaction.rs  screen.rs  server.rs  snapshot.rs  state.rs  tick.rs  vision.rs
